--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>VERSION 1</title>
 </head>
 <body>
-<div class="txt">PEACE</div>  
+<div class="txt">PEACE PEACE PEACE</div>  
 </body>
 </html>
